[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "sage-scan"
description = "My package description"
readme = "README.rst"
requires-python = ">=3.7"
keywords = ["one", "two"]
license = {text = "Apache License 2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "ansible-risk-insight",
    "Levenshtein",
    "treelib",
]

dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "sage_scan.__version__.__version__"}

[tool.setuptools]
py-modules = ["sage_scan"]
packages = ["sage_scan"]

[tool.black]
line-length = 150
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flake8]
ignore = "E203, W503,"
max-line-length = 150
